# tictactoe-rs

./: Cargo.toml  PKGBUILD  README.md
src/: game.rs  main.rs
