[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"
authors = ["xXCoolinXx collin.t.francel@gmail.com"]
description = "TicTacToe terminal game with Rust"
homepage = "https://github.com/xXCoolinXx/tictactoe-rs"
repository = "https://github.com/xXCoolinXx/tictactoe-rs"
license = "GPL"
keywords = ["tictactoe", "rust", "ttt"]
categories = ["games", "terminal-games"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
terminal_graphics = "0.1.5"
colored = "2"