[package]
name = "xo-rs"
version = "0.5.0"
edition = "2021"
authors = ["xXCoolinXx collin.t.francel@gmail.com"]
description = "TicTacToe terminal game with Rust"
homepage = "https://github.com/xXCoolinXx/xo-rs"
repository = "https://github.com/xXCoolinXx/xo-rs"
license = "GPL-3.0-or-later"
keywords = ["tictactoe", "cli", "ttt", "xo", "tic-tac-toe"]
categories = ["games"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
colored = "2"
ndarray = "0.15.4"